[package]
name = "lua51-vm"
description = "A pure Rust Lua 5.1.4 VM"
authors = ["yooksch"]
version = "0.1.0"
edition = "2024"

[lib]
name = "lua51_vm"
path = "src/lib.rs"

[[bin]]
name = "lua51vm"
path = "src/main.rs"

[dependencies]
anymap = "0.12.1"
async-recursion = "1.1.1"
enum-map = "2.7.3"
once_cell = "1.21.1"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["full"] }
